# slim-leaderboard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  leaderboard.py  pyproject.toml  requirements.txt
.github/badges/: change-failure-rate.json  deployment-frequency.json  dora-metrics.json  lead-time.json  mttr.json
.github/workflows/: leaderboard-generation.yml  metrics.yml  python-script.yml
examples/: slim-ammos-config-leaderboard.md  slim-ammos-config.json  slim-ammos-leaderboard.md  slim-fprime-config-leaderboard.md  slim-fprime-config.json  slim-fprime-leaderboard.md  slim-hysds-config-leaderboard.md  slim-hysds-config.json  slim-hysds-leaderboard.md  slim-maap-config-leaderboard.md  slim-maap-config.json  slim-maap-leaderboard.md  slim-opera-config-leaderboard.md  slim-opera-config.json  slim-opera-leaderboard.md  slim-oss-config.json  slim-oss-leaderboard.md  slim-rapid-config-leaderboard.md  slim-rapid-config.json  slim-rapid2-config-leaderboard.md  slim-rapid2-config.json  slim-sit_fuse-config-leaderboard.md  slim-sit_fuse-config.json  slim-unity-config-leaderboard.md  slim-unity-config.json  slim-unity-leaderboard.md  test-config-leaderboard.md  test-config.json
src/jpl/slim/: __init__.py  leaderboard.py
